# class-registry

./: .gitignore  .readthedocs.yaml  .travis.yml  AGENTS.md  CLAUDE.md  LICENCE.txt  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py  tox.ini
.agents/skills/creative-commits/: SKILL.md
.agents/skills/nz-english/: SKILL.md
.agents/skills/reflection/: SKILL.md
.agents/skills/release/: SKILL.md
.agents/skills/rotate-python-versions/: SKILL.md
.agents/skills/writing-adrs/: SKILL.md
.github/: dependabot.yml
.github/workflows/: build.yml
class_registry/: __init__.py  auto_register.py  base.py  cache.py  entry_points.py  patcher.py  registry.py
docs/: Makefile  advanced_topics.rst  api.rst  conf.py  entry_points.rst  factories_vs_registries.rst  getting_started.rst  index.rst  iterating_over_registries.rst  make.bat  requirements.txt  service_registries.rst  upgrading_to_v5.rst
src/class_registry/: auto_register.py  base.py  cache.py  entry_points.py  patcher.py  py.typed  registry.py
test/: __init__.py  auto_register_test.py  cache_test.py  class_registry_test.py  entry_points_test.py  helper.py  patcher_test.py  registry_test.py  test_auto_register.py  test_auto_register_deprecated.py  test_auto_register_meta.py  test_cache.py  test_class_registry.py  test_entry_points.py  test_gen_lookup_key.py  test_patcher.py  test_sorted_class_registry.py
test/dummy_package.egg-info/: PKG-INFO  entry_points.txt
