[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phx-class-registry"
version = "5.1.1"
description = "Factory+Registry pattern for Python classes"
authors = [{ name = "Phoenix Zerin", email = "phx@phx.nz" }]
requires-python = "~=3.11"
readme = "README.rst"
license = "MIT"
keywords = [
    "design pattern",
    "factory pattern",
    "registry pattern",
    "service registry",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = "https://github.com/todofixthis/class-registry"
Documentation = "https://class-registry.readthedocs.io/"
Changelog = "https://github.com/todofixthis/class-registry/releases"
Issues = "https://github.com/todofixthis/class-registry/issues"

[dependency-groups]
dev = [
    "autohooks>=24,<25",
    "autohooks-plugin-black>=23,<24",
    "autohooks-plugin-mypy>=23,<24",
    "autohooks-plugin-pytest>=23,<24",
    "autohooks-plugin-ruff>=24,<25",
    "mypy>=1,<2",
    "pytest>=8,<9",
    "sphinx>=8,<9",
    "sphinx_rtd_theme>=3,<4",
    "tox>=4,<5",
    "tox-uv>=1,<2",
]
ci = [
    "mypy>=1,<2",
    "pytest>=8,<9",
    "sphinx>=8,<9",
    "sphinx_rtd_theme>=3,<4",
    "tox-uv>=1,<2",
]

[tool.autohooks]
mode = "pythonpath"
pre-commit = [
    "autohooks.plugins.black",
    "autohooks.plugins.mypy",
    "autohooks.plugins.pytest",
    "autohooks.plugins.ruff",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/class_registry",
    "LICENCE.txt",
    "docs",
    "test",
]
exclude = ["docs/_build"]

[tool.hatch.build.targets.wheel]
include = ["src/class_registry"]
exclude = ["docs/_build"]

[tool.hatch.build.targets.wheel.sources]
"src/class_registry" = "class_registry"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.tox]
env_list = ["py313", "py312", "py311"]

[tool.tox.env_run_base]
commands = [
    ["pytest"],
    ["mypy", "src", "test"]
]
runner = "uv-venv-lock-runner"
